--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <td><a href="index4.html">Monumenti</a></td>
-                <td><a href="index5.html">Piatti tipici</a></td>
+                <td><a href="index5.html">Cucina</a></td>
             </tr>
         </table>
         <a target="_blank"
