--- a/index4.html
+++ b/index4.html
@@ -14,7 +14,10 @@
             <tr>
                 <td> <a href="index2.html">Storia</a></td>
                 <td><a href="index3.html">prova</a></td>
-                <td><a href="index5.html">Piatti tipici</a></td>
+                <td><a href="index5.html">Cucina</a></td>
             </tr>
         </table>
     </div>
+</body>
+
+</html>
