--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/mystyle.css">
     <link rel="icon" href="img/favicon.jpg">
 </head>
+<!--rgb(85, 200, 125)-->
 
-<body>
+<body style="background-color: rgb(62, 218, 116);">
     <div class="menu">
         <a href="index.html" style="float: left;">Home</a>
         <table>
